tests/diagnostics/expressions/match/pattern_type_mismatch/expect.txt
# exit: 1
input/main.coppice:6:9: error: match pattern type 'boolean' is not in target type
          boolean => 0
          ^
